--- a/Challenge_Alura_Store.ipynb
+++ b/Challenge_Alura_Store.ipynb
@@ -3143,7 +3143,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Análise Detalhada e Relatório\n",
+        "Análise Detalhada\n",
         "\n",
         "1. Faturamento:\n",
         "\n",
