--- a/Challenge_Alura_Store.ipynb
+++ b/Challenge_Alura_Store.ipynb
@@ -3143,120 +3143,92 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Análise Detalhada\n",
+        "# Análise Detalhada\n",
         "\n",
         "1. Faturamento:\n",
         "\n",
-        "Ao analisar o faturamento das quatro lojas, observamos que a Loja 1 possui o maior faturamento, totalizando R$ 1.534.509,12, enquanto a Loja 4 tem o menor faturamento, com R$ 1.384.497,58. Essa diferença pode ser atribuída a vários fatores, como localização, estratégias de marketing, e mix de produtos.\n",
+        "Ao analisar o faturamento das quatro lojas, observamos que a Loja 1 possui o maior faturamento, totalizando R$ 1.534.509,12, enquanto a loja 4 tem menor faturamento, com R$ 1.384.497,58. Essa diferença pode ser atribuída a vários fatores, como localização, estratégias de marketing, e mix de produtos.\n",
         "\n",
         "2. Vendas por Categoria\n",
         "As categorias mais vendidas nas lojas são:\n",
         "\n",
         "Loja 1: Móveis e Eletrônicos\n",
-        "\n",
         "Loja 2: Móveis e Eletrônicos\n",
-        "\n",
         "Loja 3: Móveis e Eletrônicos\n",
-        "\n",
         "Loja 4: Móveis e Eletrodomésticos\n",
         "\n",
         "Embora o volume de vendas seja alto para Móveis e Eletrônicos, o faturamento maior está nas categorias Eletrônicos e Eletrodomésticos. Isso indica que, apesar de venderem muitos móveis, os produtos eletrônicos e eletrodomésticos geram mais receita, possivelmente devido ao seu valor unitário mais alto.\n",
         "\n",
         "3. Avaliações das Lojas\n",
-        "\n",
         "As médias de avaliações das lojas são:\n",
         "\n",
         "Loja 1: 3.98 estrelas\n",
-        "\n",
         "Loja 2: 4.04 estrelas\n",
-        "\n",
         "Loja 3: 4.05 estrelas\n",
-        "\n",
         "Loja 4: 4.0 estrelas\n",
         "\n",
         "Apesar da Loja 1 ter o maior faturamento, ela possui a menor média de avaliações. Isso pode indicar problemas de qualidade ou atendimento ao cliente. Ao quebrar as avaliações por categoria, vemos que a Loja 1 tem menores avaliações em \"Utilidades Domésticas\" e \"Esporte e Lazer\", enquanto a Loja 4 tem menor satisfação em \"Instrumentos Musicais\" e \"Eletrodomésticos\".\n",
         "\n",
         "4. Produtos Mais e Menos Vendidos\n",
-        "\n",
         "Os produtos mais vendidos são:\n",
         "\n",
         "Loja 1: Guarda roupas\n",
         "Loja 2: Iniciando em programação\n",
-        "\n",
         "Loja 3: Kit banquetas\n",
-        "\n",
         "Loja 4: Cama box\n",
         "\n",
         "Os produtos menos vendidos são:\n",
         "\n",
         "Loja 1: Headset\n",
-        "\n",
         "Loja 2: Jogo de tabuleiro\n",
-        "\n",
         "Loja 3: Blocos de montar\n",
-        "\n",
         "Loja 4: Guitarra\n",
         "\n",
         "Os produtos mais vendidos impactam diretamente o volume de vendas e o faturamento, especialmente nas categorias \"Móveis\" e \"Eletrodomésticos\". Isso sugere que essas categorias são estratégicas para investimentos em propaganda e atendimento.\n",
         "\n",
         "5. Frete por Loja:\n",
-        "\n",
         "Os custos médios de frete são:\n",
         "\n",
         "Loja 1: R$ 34,69\n",
-        "\n",
         "Loja 2: R$ 33,62\n",
-        "\n",
         "Loja 3: R$ 33,07\n",
-        "\n",
         "Loja 4: R$ 31,28\n",
         "\n",
         "A Loja 1 tem o maior custo de frete, enquanto a Loja 4 tem o menor. Isso pode estar relacionado ao volume de vendas e às categorias de produtos vendidos. Lojas com maior volume de vendas tendem a ter custos de frete mais altos.\n",
         "\n",
         "6. Frete Médio vs Avaliações da Loja\n",
+        "\n",
         "Loja 1: Frete mais caro (R$ 34,69) e pior avaliação média (3,98).\n",
-        "\n",
         "Loja 3: Melhor avaliação (4,05) com um frete médio menor (R$ 33,07).\n",
-        "\n",
         "Loja 4: Frete mais barato (R$ 31,28) e uma avaliação razoável (4,0).\n",
         "\n",
         "Podemos interpretar que há uma leve tendência negativa onde quanto maior o frete, pior a avaliação. Isso sugere que fretes altos podem impactar negativamente na experiência do consumidor.\n",
         "\n",
         "7. Tabelas de Regionais:\n",
-        "\n",
         "Faturamento:\n",
         "\n",
         "Centro-Oeste lidera nas Lojas 1 e 3 com os maiores faturamentos médios.\n",
-        "\n",
         "Loja 2 tem o menor faturamento médio no Centro-Oeste.\n",
-        "\n",
         "Loja 4 tem o pior desempenho geral em faturamento médio, exceto no Norte e Sul.\n",
+        "\n",
         "Frete:\n",
         "\n",
         "Loja 4 tem os menores valores de frete, com destaque para o Centro-Oeste.\n",
-        "\n",
         "Lojas 1 e 3 têm os fretes mais altos, principalmente no Centro-Oeste e Norte.\n",
         "\n",
         "Avaliação dos Clientes:\n",
         "\n",
         "Sudeste e Sul apresentam as melhores avaliações médias na maioria das lojas.\n",
-        "\n",
         "Lojas 2 e 4 têm os maiores valores de avaliação em quase todas as regiões.\n",
-        "\n",
         "Loja 1 tem desempenho misto: maior faturamento em várias regiões, mas avaliações medianas.\n",
-        "\n",
         "\n",
         "# Conclusão\n",
         "\n",
         "Apesar de ter boas avaliações e o menor frete médio, a Loja 4 apresenta:\n",
-        "\n",
         "Baixo faturamento, impactando diretamente na geração de receita.\n",
-        "\n",
         "Volume de vendas inferior à Loja 3.\n",
-        "\n",
         "Avaliação boa, mas não suficiente para compensar a performance fraca em\n",
         "faturamento.\n",
-        "\n",
         "Menor presença em regiões de alta densidade de pedidos.\n",
         "\n",
         "Portanto, Sr. João, recomendo vender a Loja 4.\n"
